[package]
name = "etc-passwd"
version = "0.1.0"
authors = ["NAKASHIMA, Makoto <makoto.nksm+github@gmail.com>"]
edition = "2018"
description = "Get user information stored in the password file `/etc/passwd`."
documentation = "https://docs.rs/etc-passwd"
readme = "README.md"
repository = "https://github.com/gifnksm/etc-passwd"
license = "MIT OR Apache-2.0"
keywords = ["unix", "passwd", "username", "home_directory", "login_shell"]
categories = ["api-bindings", "os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.73"

[dev-dependencies]
version-sync = "0.9.1"
cargo-readme = "3.2.0"

[badges]
maintenance = { status = "passively-maintained" }
github = { repository = "gifnksm/etc-passwd" }
