[package]
name = "etc-passwd"
version = "0.2.1"
edition = "2021"
rust-version = "1.74.1"
authors = ["NAKASHIMA, Makoto <makoto.nksm+github@gmail.com>"]
description = "Get user information stored in the password file `/etc/passwd`."
documentation = "https://docs.rs/etc-passwd"
readme = "README.md"
repository = "https://github.com/gifnksm/etc-passwd"
license = "MIT OR Apache-2.0"
keywords = ["unix", "passwd", "username", "home_directory", "login_shell"]
categories = ["api-bindings", "os::unix-apis"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "etc-passwd = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "^//! etc-passwd = \"[0-9\\.]+\"", replace = "//! etc-passwd = \"{{version}}\"" },
    { file = "src/lib.rs", search = "^#!\\[doc\\(html_root_url = \"https://docs.rs/etc-passwd/[0-9\\.]+\"\\)\\]", replace = "#![doc(html_root_url = \"https://docs.rs/etc-passwd/{{version}}\")]" },
]
pre-release-hook = ["cargo", "test"]

[dependencies]
libc = "0.2.159"

[dev-dependencies]
version-sync = "0.9.4"
cargo-readme = "3.2.0"

[badges]
maintenance = { status = "passively-maintained" }
github = { repository = "gifnksm/etc-passwd", workflow = "CI" }
